hard-gists/809693/run.log
=== Docker Run Log for 809693 ===
Started at: Mi 29. Okt 17:38:38 CET 2025

[2025-10-29 17:38:38] START: Running container for 809693
[2025-10-29 17:38:38] SUCCESS: Container 6461a1ccaf8171d52f86189157823bdfc5b7bb0f7fa34049b6f3915a4f3e2dfe started for 809693
=== Container logs for 809693 ===
  File "/snippet.py", line 11
    print "  checking that CMS_MODERATOR is set to False"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 809693 ===
[2025-10-29 17:38:40] INFO: Container 6461a1ccaf8171d52f86189157823bdfc5b7bb0f7fa34049b6f3915a4f3e2dfe has stopped
